--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,9 @@ name: Send Wechat Message Daily
 on:
   schedule:
     - cron: '0 0 * * *' # UTC时间每天0点执行，即北京时间早上8点
+  push:
+    branches:
+      - main
 
 jobs:
   send_message:
