--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Send Wechat Message Daily
 
 on:
   schedule:
-    - cron: '0 0 * * *' # UTC时间每天0点执行，即北京时间早上8点
+    - cron: '*/10 * * * *' # UTC时间每天0点执行，即北京时间早上8点
   push:
     branches:
       - master
